# CVbien

./: .gitignore  .vercelignore  ADMIN_SECURITY.md  App.tsx  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  FIREBASE_SETUP.md  GITHUB-UPLOAD-GUIDE.md  MOBILE_FIXES_SUMMARY.md  Procfile  README-BACKEND.md  README-FINAL.md  README.md  SEO-GUIDE.md  STRIPE_KEYS_SETUP.md  STRIPE_SETUP.md  check-deployment.sh  deploy-github.sh  deploy.sh  deployment-trigger.txt  env.production.example  fly.toml  force-redeploy.txt  github-push-instructions.md  index.css  index.html  manual-push-guide.md  netlify.toml  nixpacks.toml  package-lock.json  package.json  push-to-github.sh  pyproject.toml  railway.json  railway.toml  render.yaml  requirements.txt  start-backend.sh  start-complete.sh  (+15 more)
backend/: .env  .env.production  Dockerfile  README.md  cvbien.db  env.example  fly.toml  main_auth.py  main_simple.py  nixpacks.toml  railway.json  render.yaml  requirements.txt
backend/backend/: README.md  fly.toml  requirements.txt
components/Auth/: AuthModal.tsx  LoginForm.tsx  RegisterForm.tsx
components/CV/: CVDisplay.tsx  (+4 more)
config/: admin.ts  stripe.ts
hooks/: useTranslation.ts
i18n/: translations.ts
pages/: AuthPage.tsx  HomePage.tsx
public/: .htaccess  manifest.json  robots.txt  sample-cv.txt  sample-job.txt  seo-language-detector.js  sitemap.xml  sw.js
services/: adminService.ts  api.ts  authService.ts  cvGeneration.ts  documentExtractor.ts  stripeService.ts
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
store/: cvGenerationStore.ts  cvStore.ts
types/: user.ts
(+34 files in other folders)
