[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cvbien-backend"
version = "1.0.0"
description = "CV Generator Backend API"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "email-validator==2.1.0",
    "pydantic[email]==2.5.0",
    "stripe==7.8.0",
    "PyPDF2==3.0.1",
    "reportlab==4.0.7",
    "openai==1.3.0",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
